--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ask-gemini",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "Lightweight package to easily interact with Google's Generative AI (Gemini).",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "lightweight"
   ],
   "author": "Luke Shimkus",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.11.3",
     "@types/node": "^18.0.6"
